// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jwAxwW"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT eTqYGD"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT binnll"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT iVPRKl"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cPIaVS"
      size="small"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT dixDtY"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT bQypzW"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT idEMlm"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT eTqYGD"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT eTqYGD"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT binnll"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT eTqYGD"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT binnll"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT iVPRKl"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT eTqYGD"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT iVPRKl"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT binnll"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT binnll"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT iVPRKl"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button XS 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT dixDtY"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT dixDtY"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT bQypzW"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT dixDtY"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT bQypzW"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT idEMlm"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT dixDtY"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT idEMlm"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT bQypzW"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cybCvQ"
    >
      <div
        className="RightWrapper-vueweo-0 gGXfpr"
      >
        <div
          className="ButtonWrapper-k744ak-0 emExDz"
        >
          <button
            className="sc-kkKunT bQypzW"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 emExDz"
      >
        <button
          className="sc-kkKunT idEMlm"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 KvNzp"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
